@@ -3,6 +3,9 @@ TODO
 * complete stand alone version
 * add tests
 
+20130113
+* updated msvscpp files
+
 20130103
 * changes to .gitignore
 * 2013 update
